# Condition-Number-Controlled-Training

./: .gitignore  .gitmodules  ADAPTIVE_UTD_IMPLEMENTATION_GUIDE.md  LICENSE  README.md  pyproject.toml  setup.py  train_parallel.py
conf/: config.yaml  register_envs.py
conf/agent/: base_agent.yaml  crossq.yaml  crossq_wn.yaml  xqc.yaml
results/: xqc.csv  xqc_visual.csv
xqc/: utils.py
xqc/agents/: __init__.py
xqc/agents/xqc/: actor.py  critic.py  temperature.py  utils.py  xqc_learner.py
xqc/envs/: __init__.py  dmc.py  envs.py  humanoid_bench.py  mujoco.py  myosuite.py
xqc/envs/wrapper/: __init__.py  single_precision.py
xqc/logging/: __init__.py  logging.py
xqc/logging/metrics/: __init__.py  hessian_eigenspectrum.py  kappa.py  learning_metrics.py  metrics.py  norm_computation.py  plasticity_metrics.py  utils.py
xqc/networks/: common.py  critic_net.py  mlp.py  policies.py
xqc/normalization/: __init__.py  normalization.py
xqc/replay_buffer/: __init__.py  parallel_replay_buffer.py
